Projects Tab: Formatting caption line spacing to accomodate new jpg fix files

--- a/final_website.css
+++ b/final_website.css
@@ -79,6 +79,7 @@ p {
   font-size: 1em;
   font-variant-caps: small-caps;
   margin-bottom: 1.5em;
+  line-height: 1.5;
 }
 
 .description {
@@ -423,4 +424,5 @@ p {
 
 .box button:hover {
   background-color: var(--pink);
+
 }
